force-app/main/default/objects/Meeting__c/fields/capacity__c.field-meta.xml
<CustomField>
    <fullName>capacity__c</fullName>
    <label>Capacity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>