force-app/main/default/objects/Meeting__c/fields/introduction__c.field-meta.xml
<CustomField>
    <fullName>introduction__c</fullName>
    <label>Introduction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>