force-app/main/default/objects/Meeting__c/fields/size__c.field-meta.xml
<CustomField>
    <fullName>size__c</fullName>
    <label>Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>