force-app/main/default/objects/Meeting__c/fields/sub_title__c.field-meta.xml
<CustomField>
    <fullName>sub_title__c</fullName>
    <label>Sub title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>